[project]
name = "datalumina-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
